yaml/min-cluster-allinone/dubbo-admin/dubbo-admin-deployment.yaml
kind: List
apiVersion: v1
items:
- apiVersion: apps/v1beta1
  kind: Deployment
  metadata:
    name: dubbo-admin
    namespace: dubbo
  spec:
    replicas: 1
    template:
      metadata:
        name: dubbo-admin
        labels:
          app: dubbo-admin
      spec:
        containers:
        - image: apache/dubbo-admin
          name: dubbo-admin
          ports:
          - name: http
            containerPort: 8080
